--- a/Firmware/Basic/.project
+++ b/Firmware/Basic/.project
@@ -82,14 +82,9 @@
 	</natures>
 	<linkedResources>
 		<link>
-			<name>kl_lib</name>
+			<name>Common</name>
 			<type>2</type>
-			<locationURI>PARENT-1-PROJECT_LOC/Common/kl_lib</locationURI>
-		</link>
-		<link>
-			<name>os</name>
-			<type>2</type>
-			<locationURI>PARENT-1-PROJECT_LOC/Common/os</locationURI>
+			<locationURI>PARENT-1-PROJECT_LOC/Common</locationURI>
 		</link>
 	</linkedResources>
 	<variableList>
