--- a/Firmware/FalloutTx/.project
+++ b/Firmware/FalloutTx/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ChArmletBasic</name>
+	<name>FalloutTx</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -24,16 +24,4 @@
 		<nature>org.eclipse.cdt.managedbuilder.core.managedBuildNature</nature>
 		<nature>org.eclipse.cdt.managedbuilder.core.ScannerConfigNature</nature>
 	</natures>
-	<linkedResources>
-		<link>
-			<name>Common</name>
-			<type>2</type>
-			<locationURI>PARENT-1-PROJECT_LOC/Common</locationURI>
-		</link>
-		<link>
-			<name>Radio</name>
-			<type>2</type>
-			<locationURI>PARENT-1-PROJECT_LOC/Radio</locationURI>
-		</link>
-	</linkedResources>
 </projectDescription>
