--- a/Firmware/FalloutTx/.project
+++ b/Firmware/FalloutTx/.project
@@ -24,4 +24,11 @@
 		<nature>org.eclipse.cdt.managedbuilder.core.managedBuildNature</nature>
 		<nature>org.eclipse.cdt.managedbuilder.core.ScannerConfigNature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>Radio</name>
+			<type>2</type>
+			<locationURI>PARENT-1-PROJECT_LOC/Radio</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
