--- a/Firmware/FalloutTx/.project
+++ b/Firmware/FalloutTx/.project
@@ -26,6 +26,11 @@
 	</natures>
 	<linkedResources>
 		<link>
+			<name>Common</name>
+			<type>2</type>
+			<locationURI>PARENT-1-PROJECT_LOC/Common</locationURI>
+		</link>
+		<link>
 			<name>Radio</name>
 			<type>2</type>
 			<locationURI>PARENT-1-PROJECT_LOC/Radio</locationURI>
