--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,12 @@ Hardware/Gerber/Rezonit/ChibiArmlet.drl
 Hardware/Gerber/Rezonit/ChibiArmlet11Assem.zip
 Hardware/Gerber/Rezonit/FilesDescription.txt
 Hardware/Gerber/Rezonit/other_formats.XLS
+Hardware/SilkS.pdf
+Pill/Gerber/pill2-rez.zip
+Pill/Pill2.bak
+Pill/Pill2.dsn
+Pill/Pill2.kicad_pcb-bak
+Pill/Pill2/.Pill2.fsxview
+Pill/Pill2/Pill2.fsproj
+Pill/Pill2/Pill2.fsx
+Pill/Pill2/Pill2.ses
