--- a/Firmware/Basic/.cproject
+++ b/Firmware/Basic/.cproject
@@ -78,6 +78,8 @@
 								<option id="ilg.gnuarmeclipse.managedbuild.cross.option.cpp.compiler.nortti.1965394603" name="Do not use RTTI (-fno-rtti)" superClass="ilg.gnuarmeclipse.managedbuild.cross.option.cpp.compiler.nortti" value="true" valueType="boolean"/>
 								<option id="ilg.gnuarmeclipse.managedbuild.cross.option.cpp.compiler.include.paths.1524633975" name="Include paths (-I)" superClass="ilg.gnuarmeclipse.managedbuild.cross.option.cpp.compiler.include.paths" valueType="includePath">
 									<listOptionValue builtIn="false" value="../../Common/os"/>
+									<listOptionValue builtIn="false" value="../../../../../ArmletGit/Armlet_fw/Mesh_lvl/"/>
+									<listOptionValue builtIn="false" value="../../../../../ArmletGit/Armlet_fw/Mesh_lvl/inc"/>
 									<listOptionValue builtIn="false" value="../../Common/os/kernel/include"/>
 									<listOptionValue builtIn="false" value="../../Common/kl_lib"/>
 									<listOptionValue builtIn="false" value="../../Common/os/hal/include"/>
