--- a/Firmware/.cproject
+++ b/Firmware/.cproject
@@ -45,31 +45,21 @@
 							<builder buildPath="${workspace_loc:/ChArmletBasic}/Debug" id="ilg.gnuarmeclipse.managedbuild.cross.builder.1854723886" keepEnvironmentInBuildfile="false" managedBuildOn="true" name="Gnu Make Builder" superClass="ilg.gnuarmeclipse.managedbuild.cross.builder"/>
 							<tool id="ilg.gnuarmeclipse.managedbuild.cross.tool.assembler.1566925216" name="Cross ARM GNU Assembler" superClass="ilg.gnuarmeclipse.managedbuild.cross.tool.assembler">
 								<option id="ilg.gnuarmeclipse.managedbuild.cross.option.assembler.usepreprocessor.229525762" name="Use preprocessor" superClass="ilg.gnuarmeclipse.managedbuild.cross.option.assembler.usepreprocessor" value="true" valueType="boolean"/>
-								<option id="ilg.gnuarmeclipse.managedbuild.cross.option.assembler.include.paths.267978467" name="Include paths (-I)" superClass="ilg.gnuarmeclipse.managedbuild.cross.option.assembler.include.paths" valueType="includePath">
-									<listOptionValue builtIn="false" value="../../Common/os"/>
-									<listOptionValue builtIn="false" value="../../Common/os/hal"/>
-									<listOptionValue builtIn="false" value="../../Common/os/kernel/include"/>
-									<listOptionValue builtIn="false" value="../../Common/os/hal/platforms/STM32L1xx"/>
-									<listOptionValue builtIn="false" value="../../Common/os/ports/common/ARMCMx/CMSIS/include"/>
-									<listOptionValue builtIn="false" value="../../Common/os/ports/GCC/ARMCMx"/>
-									<listOptionValue builtIn="false" value="../../Common/os/ports/GCC/ARMCMx/STM32L1xx"/>
-									<listOptionValue builtIn="false" value="../../Common/os/ports/common/ARMCMx"/>
-									<listOptionValue builtIn="false" value="../../Common/os/hal/platforms/STM32"/>
-								</option>
+								<option id="ilg.gnuarmeclipse.managedbuild.cross.option.assembler.include.paths.267978467" name="Include paths (-I)" superClass="ilg.gnuarmeclipse.managedbuild.cross.option.assembler.include.paths" valueType="includePath"/>
 								<inputType id="ilg.gnuarmeclipse.managedbuild.cross.tool.assembler.input.17870734" superClass="ilg.gnuarmeclipse.managedbuild.cross.tool.assembler.input"/>
 							</tool>
 							<tool id="ilg.gnuarmeclipse.managedbuild.cross.tool.c.compiler.1263064322" name="Cross ARM C Compiler" superClass="ilg.gnuarmeclipse.managedbuild.cross.tool.c.compiler">
 								<option id="ilg.gnuarmeclipse.managedbuild.cross.option.c.compiler.std.2071960293" name="Language standard" superClass="ilg.gnuarmeclipse.managedbuild.cross.option.c.compiler.std" useByScannerDiscovery="true" value="ilg.gnuarmeclipse.managedbuild.cross.option.c.compiler.std.gnu99" valueType="enumerated"/>
 								<option id="ilg.gnuarmeclipse.managedbuild.cross.option.c.compiler.include.paths.1668656818" name="Include paths (-I)" superClass="ilg.gnuarmeclipse.managedbuild.cross.option.c.compiler.include.paths" useByScannerDiscovery="false" valueType="includePath">
-									<listOptionValue builtIn="false" value="../../Common/os"/>
-									<listOptionValue builtIn="false" value="../../Common/os/kernel/include"/>
-									<listOptionValue builtIn="false" value="../../Common/os/hal/include"/>
-									<listOptionValue builtIn="false" value="../../Common/os/hal/platforms/STM32L1xx"/>
-									<listOptionValue builtIn="false" value="../../Common/os/ports/common/ARMCMx/CMSIS/include"/>
-									<listOptionValue builtIn="false" value="../../Common/os/ports/GCC/ARMCMx"/>
-									<listOptionValue builtIn="false" value="../../Common/os/ports/GCC/ARMCMx/STM32L1xx"/>
-									<listOptionValue builtIn="false" value="../../Common/os/ports/common/ARMCMx"/>
-									<listOptionValue builtIn="false" value="../../Common/os/hal/platforms/STM32"/>
+									<listOptionValue builtIn="false" value="../os"/>
+									<listOptionValue builtIn="false" value="../os/kernel/include"/>
+									<listOptionValue builtIn="false" value="../os/hal/include"/>
+									<listOptionValue builtIn="false" value="../os/hal/platforms/STM32L1xx"/>
+									<listOptionValue builtIn="false" value="../os/ports/common/ARMCMx/CMSIS/include"/>
+									<listOptionValue builtIn="false" value="../os/ports/GCC/ARMCMx"/>
+									<listOptionValue builtIn="false" value="../os/ports/GCC/ARMCMx/STM32L1xx"/>
+									<listOptionValue builtIn="false" value="../os/ports/common/ARMCMx"/>
+									<listOptionValue builtIn="false" value="../os/hal/platforms/STM32"/>
 								</option>
 								<inputType id="ilg.gnuarmeclipse.managedbuild.cross.tool.c.compiler.input.1189015055" superClass="ilg.gnuarmeclipse.managedbuild.cross.tool.c.compiler.input"/>
 							</tool>
@@ -78,19 +68,18 @@
 								<option id="ilg.gnuarmeclipse.managedbuild.cross.option.cpp.compiler.noexceptions.300314030" name="Do not use exceptions (-fno-exceptions)" superClass="ilg.gnuarmeclipse.managedbuild.cross.option.cpp.compiler.noexceptions" useByScannerDiscovery="true" value="true" valueType="boolean"/>
 								<option id="ilg.gnuarmeclipse.managedbuild.cross.option.cpp.compiler.nortti.1965394603" name="Do not use RTTI (-fno-rtti)" superClass="ilg.gnuarmeclipse.managedbuild.cross.option.cpp.compiler.nortti" useByScannerDiscovery="true" value="true" valueType="boolean"/>
 								<option id="ilg.gnuarmeclipse.managedbuild.cross.option.cpp.compiler.include.paths.1524633975" name="Include paths (-I)" superClass="ilg.gnuarmeclipse.managedbuild.cross.option.cpp.compiler.include.paths" useByScannerDiscovery="false" valueType="includePath">
-									<listOptionValue builtIn="false" value="../../Common/os"/>
-									<listOptionValue builtIn="false" value="../../Common/os/kernel/include"/>
-									<listOptionValue builtIn="false" value="../../Common/kl_lib"/>
-									<listOptionValue builtIn="false" value="../../Common/os/hal/include"/>
-									<listOptionValue builtIn="false" value="../../Common"/>
 									<listOptionValue builtIn="false" value="../inc"/>
-									<listOptionValue builtIn="false" value="../../Common/os/hal/platforms/STM32L1xx"/>
-									<listOptionValue builtIn="false" value="../../Common/os/ports/common/ARMCMx/CMSIS/include"/>
-									<listOptionValue builtIn="false" value="../../Common/os/ports/GCC/ARMCMx"/>
-									<listOptionValue builtIn="false" value="../../Common/os/ports/GCC/ARMCMx/STM32L1xx"/>
-									<listOptionValue builtIn="false" value="../../Common/os/ports/common/ARMCMx"/>
-									<listOptionValue builtIn="false" value="../../Common/os/hal/platforms/STM32"/>
-									<listOptionValue builtIn="false" value="../../Radio"/>
+									<listOptionValue builtIn="false" value="../os"/>
+									<listOptionValue builtIn="false" value="../os/kernel/include"/>
+									<listOptionValue builtIn="false" value="../kl_lib"/>
+									<listOptionValue builtIn="false" value="../os/hal/include"/>
+									<listOptionValue builtIn="false" value="../os/hal/platforms/STM32L1xx"/>
+									<listOptionValue builtIn="false" value="../os/ports/common/ARMCMx/CMSIS/include"/>
+									<listOptionValue builtIn="false" value="../os/ports/GCC/ARMCMx"/>
+									<listOptionValue builtIn="false" value="../os/ports/GCC/ARMCMx/STM32L1xx"/>
+									<listOptionValue builtIn="false" value="../os/ports/common/ARMCMx"/>
+									<listOptionValue builtIn="false" value="../os/hal/platforms/STM32"/>
+									<listOptionValue builtIn="false" value="../Radio"/>
 								</option>
 								<inputType id="ilg.gnuarmeclipse.managedbuild.cross.tool.cpp.compiler.input.1368711610" superClass="ilg.gnuarmeclipse.managedbuild.cross.tool.cpp.compiler.input"/>
 							</tool>
@@ -100,7 +89,7 @@
 							<tool id="ilg.gnuarmeclipse.managedbuild.cross.tool.cpp.linker.726654264" name="Cross ARM C++ Linker" superClass="ilg.gnuarmeclipse.managedbuild.cross.tool.cpp.linker">
 								<option id="ilg.gnuarmeclipse.managedbuild.cross.option.cpp.linker.gcsections.208018203" name="Remove unused sections (-Xlinker --gc-sections)" superClass="ilg.gnuarmeclipse.managedbuild.cross.option.cpp.linker.gcsections" value="true" valueType="boolean"/>
 								<option id="ilg.gnuarmeclipse.managedbuild.cross.option.cpp.linker.scriptfile.1629526873" name="Script files (-T)" superClass="ilg.gnuarmeclipse.managedbuild.cross.option.cpp.linker.scriptfile" valueType="stringList">
-									<listOptionValue builtIn="false" value="../../Common/os/ports/GCC/ARMCMx/STM32L1xx/ld/STM32L151C6.ld"/>
+									<listOptionValue builtIn="false" value="../STM32L151xB.ld"/>
 								</option>
 								<option id="ilg.gnuarmeclipse.managedbuild.cross.option.cpp.linker.nostart.816380143" name="Do not use standard start files (-nostartfiles)" superClass="ilg.gnuarmeclipse.managedbuild.cross.option.cpp.linker.nostart" value="true" valueType="boolean"/>
 								<option id="ilg.gnuarmeclipse.managedbuild.cross.option.cpp.linker.nodeflibs.1174280365" name="Do not use default libraries (-nodefaultlibs)" superClass="ilg.gnuarmeclipse.managedbuild.cross.option.cpp.linker.nodeflibs" value="false" valueType="boolean"/>
