--- a/Firmware/.settings/org.eclipse.cdt.managedbuilder.core.prefs
+++ b/Firmware/.settings/org.eclipse.cdt.managedbuilder.core.prefs
@@ -1,10 +1,20 @@
 eclipse.preferences.version=1
+environment/buildEnvironmentInclude/com.atollic.truestudio.configuration.release.773485909/CPATH/delimiter=;
+environment/buildEnvironmentInclude/com.atollic.truestudio.configuration.release.773485909/CPATH/operation=remove
+environment/buildEnvironmentInclude/com.atollic.truestudio.configuration.release.773485909/C_INCLUDE_PATH/delimiter=;
+environment/buildEnvironmentInclude/com.atollic.truestudio.configuration.release.773485909/C_INCLUDE_PATH/operation=remove
+environment/buildEnvironmentInclude/com.atollic.truestudio.configuration.release.773485909/append=true
+environment/buildEnvironmentInclude/com.atollic.truestudio.configuration.release.773485909/appendContributed=true
 environment/buildEnvironmentInclude/com.atollic.truestudio.exe.debug.1311227458/CPATH/delimiter=;
 environment/buildEnvironmentInclude/com.atollic.truestudio.exe.debug.1311227458/CPATH/operation=remove
 environment/buildEnvironmentInclude/com.atollic.truestudio.exe.debug.1311227458/C_INCLUDE_PATH/delimiter=;
 environment/buildEnvironmentInclude/com.atollic.truestudio.exe.debug.1311227458/C_INCLUDE_PATH/operation=remove
 environment/buildEnvironmentInclude/com.atollic.truestudio.exe.debug.1311227458/append=true
 environment/buildEnvironmentInclude/com.atollic.truestudio.exe.debug.1311227458/appendContributed=true
+environment/buildEnvironmentLibrary/com.atollic.truestudio.configuration.release.773485909/LIBRARY_PATH/delimiter=;
+environment/buildEnvironmentLibrary/com.atollic.truestudio.configuration.release.773485909/LIBRARY_PATH/operation=remove
+environment/buildEnvironmentLibrary/com.atollic.truestudio.configuration.release.773485909/append=true
+environment/buildEnvironmentLibrary/com.atollic.truestudio.configuration.release.773485909/appendContributed=true
 environment/buildEnvironmentLibrary/com.atollic.truestudio.exe.debug.1311227458/LIBRARY_PATH/delimiter=;
 environment/buildEnvironmentLibrary/com.atollic.truestudio.exe.debug.1311227458/LIBRARY_PATH/operation=remove
 environment/buildEnvironmentLibrary/com.atollic.truestudio.exe.debug.1311227458/append=true
