--- a/Firmware/.cproject
+++ b/Firmware/.cproject
@@ -77,6 +77,7 @@
 									<listOptionValue builtIn="false" value="../os/stm32l15x"/>
 									<listOptionValue builtIn="false" value="../kl_lib"/>
 									<listOptionValue builtIn="false" value="../Radio"/>
+									<listOptionValue builtIn="false" value="../Pill"/>
 								</option>
 								<option id="com.atollic.truestudio.common_options.target.endianess.2049112830" name="Endianess" superClass="com.atollic.truestudio.common_options.target.endianess" useByScannerDiscovery="false"/>
 								<option id="com.atollic.truestudio.common_options.target.mcpu.1778009844" name="Microcontroller" superClass="com.atollic.truestudio.common_options.target.mcpu" useByScannerDiscovery="false" value="STM32L151C8" valueType="enumerated"/>
@@ -200,6 +201,7 @@
 									<listOptionValue builtIn="false" value="../os/stm32l15x"/>
 									<listOptionValue builtIn="false" value="../kl_lib"/>
 									<listOptionValue builtIn="false" value="../Radio"/>
+									<listOptionValue builtIn="false" value="../Pill"/>
 								</option>
 								<option id="com.atollic.truestudio.common_options.target.endianess.48032065" name="Endianess" superClass="com.atollic.truestudio.common_options.target.endianess" useByScannerDiscovery="false"/>
 								<option id="com.atollic.truestudio.common_options.target.mcpu.153188973" name="Microcontroller" superClass="com.atollic.truestudio.common_options.target.mcpu" useByScannerDiscovery="false" value="STM32L151C8" valueType="enumerated"/>
